--- a/app/src/main/res/layout/activity_caretaker_dashboard.xml
+++ b/app/src/main/res/layout/activity_caretaker_dashboard.xml
@@ -34,10 +34,10 @@
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/medicalDiagnosticsEditImageView" />
+          app:layout_constraintTop_toBottomOf="@+id/headerGuardiansLogo" />
 
       <ImageView
-          android:id="@+id/medicalDiagnosticsEditImageView"
+          android:id="@+id/headerGuardiansLogo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="54dp"
@@ -57,7 +57,7 @@
           android:onClick="onNotificationsClick"
           android:text="Test: Notifications"
           android:textSize="10sp"
-          app:layout_constraintBottom_toBottomOf="@+id/medicalDiagnosticsEditImageView"
+          app:layout_constraintBottom_toBottomOf="@+id/headerGuardiansLogo"
           app:layout_constraintEnd_toEndOf="parent" />
 
       <Button
