--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,10 +81,10 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/medicalDiagnosticsEditImageView" />
+                app:layout_constraintTop_toBottomOf="@+id/headerGuardiansLogo" />
 
             <ImageView
-                android:id="@+id/medicalDiagnosticsEditImageView"
+                android:id="@+id/headerGuardiansLogo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
@@ -107,7 +107,7 @@
         app:srcCompat="@drawable/fbc_agedcare_icon_" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/headerMenuIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
