--- a/app/src/main/res/layout/activity_patient_dashboard.xml
+++ b/app/src/main/res/layout/activity_patient_dashboard.xml
@@ -103,10 +103,10 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/medicalDiagnosticsEditImageView" />
+                app:layout_constraintTop_toBottomOf="@+id/headerGuardiansLogo" />
 
             <ImageView
-                android:id="@+id/medicalDiagnosticsEditImageView"
+                android:id="@+id/headerGuardiansLogo"
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
                 android:layout_marginTop="54dp"
