--- a/app/src/main/res/layout/activity_patient_page_update.xml
+++ b/app/src/main/res/layout/activity_patient_page_update.xml
@@ -49,7 +49,7 @@
                 />
 
             <ImageView
-                android:id="@+id/medicalDiagnosticsEditImageView"
+                android:id="@+id/headerGuardiansLogo"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
