--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,5 +36,13 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="TabLayoutTheme" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">16sp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
 
+    </style>
+    <style name="TabLayoutSelectedTheme" parent="TextAppearance.Design.Tab">
+        <item name="android:textColor">@color/TG_blue</item>
+    </style>
 </resources>
