--- a/app/src/main/res/layout/fragment_g_p_profile.xml
+++ b/app/src/main/res/layout/fragment_g_p_profile.xml
@@ -3,7 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+        <FrameLayout  android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+        <!-- Background ImageView -->
+        <ImageView
+            android:id="@+id/backgroundImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/background_logo" />
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -211,5 +220,5 @@
             app:layout_constraintTop_toBottomOf="@+id/textView61" />
 
     </LinearLayout>
-
+        </FrameLayout>
 </ScrollView>
