--- a/app/src/main/res/layout/fragment_next_of_kin.xml
+++ b/app/src/main/res/layout/fragment_next_of_kin.xml
@@ -4,6 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+<FrameLayout  android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <!-- Background ImageView -->
+    <ImageView
+        android:id="@+id/backgroundImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/background_logo" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -12,7 +22,6 @@
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="-16dp">
-
 
         <TextView
             android:id="@+id/FirstName"
@@ -209,5 +218,5 @@
             app:layout_constraintTop_toBottomOf="@+id/behaviorManagementSummary" />
 
     </LinearLayout>
-
+</FrameLayout>
 </ScrollView>
