--- a/app/src/main/res/layout/activity_medical_diagnostics.xml
+++ b/app/src/main/res/layout/activity_medical_diagnostics.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".view.patient.patientdata.healthdetails.MedicalDiagnosticsActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/medicalDiaganosticsHeaderCardView"
@@ -88,7 +89,7 @@
                     tools:layout_editor_absoluteY="10dp" />
 
                 <ImageView
-                    android:id="@+id/headerGuardiansLogo"
+                    android:id="@+id/medicalDiagnosticsEditImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:layout_marginLeft="15dp"
