--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/patient_list_backgroud"
     tools:context=".view.patient.dailyreport.DailyReportActivity">
 
     <CalendarView
