--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,7 +98,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
-        android:id="@+id/radioGroup2"
+        android:id="@+id/login_role_radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -110,14 +110,14 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/caretaker_radioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_bold"
             android:text="Caretaker" />
 
         <RadioButton
-            android:id="@+id/radioButton4"
+            android:id="@+id/admin_radioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_bold"
@@ -133,10 +133,10 @@
         android:text="Login as:"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/radioGroup2"
-        app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
+        app:layout_constraintBottom_toBottomOf="@+id/login_role_radioGroup"
+        app:layout_constraintEnd_toStartOf="@+id/login_role_radioGroup"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/radioGroup2" />
+        app:layout_constraintTop_toTopOf="@+id/login_role_radioGroup" />
 
     <ImageView
         android:id="@+id/imageView4"
