all pages implemented by TGT12023
Home page for admin: implemented by Xinyao Cheng

Pre-existing conditions: implemented by Duolun Zhang

Patient list: its xml file implemented by Zhengyang Li, while java file done by Xinyao Cheng

Slide menu: its xml file implemented by Lingzhi Liu, while java file done by Xinyao Cheng

Care plan summary: implemented by Duolun Zhang

Patient profile-personal detail: xml file done by Zhengyang Li and Xinyao Cheng

Next of kins profile: xml file done by Duolun Zhang

GP profile: xml file done by Lingzhi Liu

Adding patient, next od kins and GP page: Zhengyang Li

Daily report xml implementation: Duolun Zhang

Care plan detail page xml: Won Hyung Kim

Setting Page xml: Won Hyung Kim

--- a/app/src/main/res/layout/activity_main_page_with_menu.xml
+++ b/app/src/main/res/layout/activity_main_page_with_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/patient_profile_bg"
-    tools:context=".MainPageWithMenuActivity">
+    tools:context=".view.general.MainPageWithMenuActivity">
 
     <Button
         android:id="@+id/menu_button_main_page"
