--- a/app/src/main/res/layout/activity_care_plan_summary.xml
+++ b/app/src/main/res/layout/activity_care_plan_summary.xml
@@ -7,14 +7,17 @@
     android:fillViewport="true">
 
 
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <androidx.cardview.widget.CardView
             android:id="@+id/headerCard"
-            android:layout_width="411dp"
-            android:layout_height="149dp"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
             android:layout_marginTop="-20dp"
             android:translationZ="-20dp"
             app:cardBackgroundColor="@color/TG_blue"
@@ -23,79 +26,95 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="180dp"
+                android:layout_marginTop="40dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/gopher_logo" />
+
+            <ImageView
+                android:id="@+id/menuButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="50dp"
+                app:srcCompat="@drawable/menu_button" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="54dp"
+                android:layout_height="51dp"
+                android:layout_marginLeft="330dp"
+                android:layout_marginTop="45dp"
+                app:srcCompat="@drawable/profile_avatar_women" />
+
+
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="90dp"
+                android:layout_marginTop="90dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="Care Plan Summary"
+                android:textColor="@android:color/white"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+
         </androidx.cardview.widget.CardView>
-
         <ImageView
-            android:id="@+id/menuButton11"
-            android:layout_width="33dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="25dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/menu_button" />
-
-        <ImageView
-            android:id="@+id/imageView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="35dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/gopher_logo" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="140dp"
-            android:layout_marginTop="90dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="Health Details"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Care Plan"
-            android:textColor="@color/black"
-            android:textSize="18dp"
-            android:textStyle="bold"
+            android:id="@+id/imageView9"
+            android:layout_width="match_parent"
+            android:layout_height="82dp"
+            android:layout_marginTop="-45dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/headerCard" />
+            app:layout_constraintTop_toBottomOf="@id/headerCard"
+            app:srcCompat="@drawable/rectangle1" />
+
+        <TextView
+            android:id="@+id/textView30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Summary"
+            android:textSize="15dp"
+            app:layout_constraintEnd_toEndOf="@+id/imageView9"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView9" />
+
 
         <TextView
             android:id="@+id/textView13"
             android:layout_width="133dp"
             android:layout_height="25dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="45dp"
             android:fontFamily="sans-serif-black"
-            android:text="1.Care Plan Type:"
+            android:text="Care Plan Type:"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
+            app:layout_constraintTop_toTopOf="@+id/textView30" />
 
         <TextView
             android:id="@+id/carePlanSummary"
-            android:layout_width="365dp"
-            android:layout_height="wrap_content"
+            android:layout_width="363dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="19dp"
             android:layout_marginTop="5dp"
-            android:background="#ECECEC"
-            android:text="careplan"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.39"
+            android:background="@drawable/careplan_button"
+            android:text="Loading data from database..."
+            android:textAppearance="?android:textAppearanceMedium"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
 
         <TextView
             android:id="@+id/textView6"
@@ -104,7 +123,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="2.Nutrition and Hydration:"
+            android:text="Nutrition and Hydration:"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -116,8 +135,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="#ECECEC"
-            android:text="nutritionandhydration"
+            android:background="@drawable/careplan_button"
+            android:text="Yes"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -130,7 +149,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="3.Support requirements:"
+            android:text="Support requirements:"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -138,14 +157,25 @@
 
 
         <TextView
-            android:id="@+id/supportReqSummary"
+            android:id="@+id/supportReqSummary1"
             android:layout_width="365dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="#ECECEC"
             android:inputType="textMultiLine"
-            android:text="supportReqSummary"
+            android:text="Walking"
+            android:background="@drawable/careplan_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        <TextView
+            android:id="@+id/supportReqSummary"
+            android:layout_width="365dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="42dp"
+            android:background="@drawable/careplan_button"
+            android:inputType="textMultiLine"
+            android:text="Bath/Toilets"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -156,7 +186,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="4.Diet timings:"
+            android:text="Diet timings:"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -168,8 +198,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="#ECECEC"
-            android:text="diettiming"
+            android:background="@drawable/careplan_button"
+            android:text="Water"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -180,7 +210,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="5.Drink Likes:"
+            android:text="Drink Likes:"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -192,9 +222,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="#ECECEC"
+            android:background="@drawable/careplan_button"
             android:inputType="textMultiLine"
-            android:text="drinklikes"
+            android:text="Water"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView131" />
 
@@ -205,7 +235,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="6.Sleep pattern:"
+            android:text="Sleep pattern:"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -217,9 +247,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="#ECECEC"
-            android:backgroundTint="#ECECEC"
-            android:text="sleeppattern"
+            android:background="@drawable/careplan_button"
+            android:text="8PM - 4AM"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView61" />
 
@@ -230,7 +259,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="7.Pain:"
+            android:text="Pain:"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -241,20 +270,21 @@
             android:layout_width="365dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="#ECECEC"
+            android:background="@drawable/careplan_button"
             android:inputType="textMultiLine"
-            android:text="painsummary"
+            android:text="Chronic"
             app:layout_constraintStart_toStartOf="@+id/textView71"
             app:layout_constraintTop_toBottomOf="@+id/textView71" />
 
+
         <TextView
             android:id="@+id/textView1311"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
+            android:layout_width="250dp"
+            android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="8. Pain score recording required (The higher the number, the more painful it is)"
+            android:text="Pain Score"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -264,52 +294,74 @@
             android:id="@+id/painRatingBarSummary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/careplan_button"
+            android:inputType="textMultiLine"
+            android:text="7"
+            app:layout_constraintStart_toStartOf="@+id/textView1311"
             app:layout_constraintTop_toBottomOf="@+id/textView1311" />
 
         <TextView
-            android:id="@+id/textView711"
+            android:id="@+id/textView73"
             android:layout_width="250dp"
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="9.Behaviour management:"
+            android:text="Behavioural Management"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/painRatingBarSummary" />
 
         <TextView
-            android:id="@+id/behaviorManagementSummary"
+            android:id="@+id/behaviouralManagement"
             android:layout_width="365dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="#ECECEC"
-            android:inputType="textMultiLine"
-            android:text="behaviormanagement"
-            app:layout_constraintStart_toStartOf="@+id/textView711"
-            app:layout_constraintTop_toBottomOf="@+id/textView711" />
-
-
+            android:background="@drawable/careplan_button"
+            android:text="Pet therapy"
+            app:layout_constraintStart_toStartOf="@+id/textView73"
+            app:layout_constraintTop_toBottomOf="@+id/textView73" />
 
         <Button
-            android:id="@+id/carePlanSubmitButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/carePlanPrevButton"
+            android:layout_width="122dp"
+            android:layout_height="49dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:backgroundTint="#3297C3"
-            android:text="Submit"
+            android:text="Previous"
+            android:textStyle="bold"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.091"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/behaviorManagementSummary" />
+            app:layout_constraintTop_toBottomOf="@+id/behaviouralManagement"
+            app:layout_constraintVertical_bias="0.02" />
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="122dp"
+            android:layout_height="49dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="#3297C3"
+            android:text="Save"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.804"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/behaviouralManagement"
+            app:layout_constraintVertical_bias="0.019" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
