@XinyaoCheng add a xx button
Xinyao Cheng added a xx button on 25/7/23. When users click this button, they can go to xx page.
Trello card:https://trello.com/c/1Ae5emGK
test video: https://video.deakin.edu.au/media/t/1_vcjvpj43

--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -6,7 +6,7 @@
     android:layout_height="851dp"
     android:textAlignment="center">
 
-
+<!--test-->
     <androidx.cardview.widget.CardView
         android:id="@+id/headerCard"
         android:layout_width="match_parent"
