Profile Image XML Design
Profile Image
XML Design is made, next is to firebase.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,5 +33,6 @@
     <color name="homepageButtonsEnd">#FF2F83AA</color>
     <color name="homepageButtonsStart">#FF54C5F4</color>
 
+    <color name="gray2">#D3D3D3</color>
 
 </resources>
